--- a/iphone-theme.html
+++ b/iphone-theme.html
@@ -858,6 +858,46 @@
                 </div>
             {/block:IndexPage}
             {block:PermalinkPage}
+<!--IF DISQUS---
+    {block:Date}
+        <div class="bubble">
+            <div class="top"></div>
+            <style type="text/css">
+                #disqus_thread {
+                    background: url('http://assets.tumblr.com/images/iphone/tumblelog_retina/content_bg.png') -1px 0 repeat-y transparent;
+                    width: 586px;
+                    margin: 0;
+                    padding: 0 11px;
+                }
+                #disqus_thread a {
+                    text-decoration: underline;
+                }
+                #dsq-new-post h3 {
+                    margin-top: 0;
+                }
+                #dsq-content .dsq-item-trackback {
+                    margin-bottom: 0;
+                }
+                #dsq-global-toolbar {
+                    margin-top: 0 !important;
+                }
+            </style>
+            <div id="disqus_thread"></div>
+            <script type="text/javascript">
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true; dsq.src = 'http://DISQUS_SHORTNAME.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+            </script>
+            <div class="content">
+                <div class="copy">
+                </div>
+                <div class="clear"></div>
+            </div>
+            <div class="bottom"></div>
+        </div>
+    {/block:Date}
+----ENDIF DISQUS-->
                 {block:PostNotes}
                     <div class="bubble">
                         <div class="top"></div>
@@ -898,6 +938,16 @@
             document.body.className = 'android';
         }
     </script>
+<!--IF DISQUS---
+<script type="text/javascript">
+var disqus_shortname = 'DISQUS_SHORTNAME';
+(function () {
+  var s = document.createElement('script'); s.async = true;
+  s.src = 'http://disqus.com/forums/' + disqus_shortname + '/count.js';
+  (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+}());
+</script>
+----ENDIF DISQUS-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
 </body>
