--- a/iphone-theme.html
+++ b/iphone-theme.html
@@ -4,6 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
+    {MobileAppHeaders}
     <link rel="stylesheet" type="text/css" href="https://secure.static.tumblr.com/4ra4qv5/Zoundmipb/normalize.css">
     <script src="https://secure.static.tumblr.com/4ra4qv5/lihnfxm92/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
